--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -99,25 +99,41 @@
                         android:textColor="@color/black" />
                 </LinearLayout>
 
-                <com.airbnb.lottie.LottieAnimationView
-                    android:id="@+id/animationView"
-                    android:layout_width="match_parent"
-                    android:layout_height="150dp"
-                    android:scaleType="centerCrop"
-                    android:layout_margin="20dp"
-                    app:lottie_rawRes="@raw/no_order"
-                    app:lottie_autoPlay="true"
-                    app:lottie_loop="true"/>
-
-                <TextView
-                    android:id="@+id/noOrderTv"
+                <LinearLayout
+                    android:id="@+id/animationLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textAlignment="center"
-                    android:text="No Current Orders"
-                    android:textStyle="bold"
-                    android:textSize="18sp"
+                    android:orientation="vertical"
+                    android:visibility="gone"
+                    >
+                    <com.airbnb.lottie.LottieAnimationView
+                        android:id="@+id/animationView"
+                        android:layout_width="match_parent"
+                        android:layout_height="150dp"
+                        android:scaleType="centerCrop"
+                        android:layout_margin="20dp"
+                        app:lottie_rawRes="@raw/no_order"
+                        app:lottie_autoPlay="true"
+                        app:lottie_loop="true"/>
+
+                    <TextView
+                        android:id="@+id/noOrderTv"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textAlignment="center"
+                        android:text="No Current Orders"
+                        android:textStyle="bold"
+                        android:textSize="18sp"
+                        />
+                </LinearLayout>
+
+                <ProgressBar
+                    android:id="@+id/progressBar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone"
                     />
+
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/orderRecyclerView"
