--- a/app/src/main/res/layout/fragment_order_status.xml
+++ b/app/src/main/res/layout/fragment_order_status.xml
@@ -16,43 +16,56 @@
         android:visibility="gone"
         />
 
-    <LinearLayout
-        android:id="@+id/animationLayout"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipeRefreshLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginTop="100dp"
-        android:visibility="gone"
         >
-        <com.airbnb.lottie.LottieAnimationView
-            android:id="@+id/animationView"
-            android:layout_width="300dp"
-            android:layout_height="200dp"
-            android:scaleType="centerCrop"
-            android:layout_margin="20dp"
-            app:lottie_rawRes="@raw/no_order"
-            app:lottie_autoPlay="true"
-            app:lottie_loop="true"
-            />
-
-        <TextView
-            android:id="@+id/noOrderTv"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:text="No Orders"
-            android:textStyle="bold"
-            android:textSize="18sp"
+            android:orientation="vertical"
+            >
+            <LinearLayout
+                android:id="@+id/animationLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginTop="100dp"
+                android:visibility="gone"
+                >
+                <com.airbnb.lottie.LottieAnimationView
+                    android:id="@+id/animationView"
+                    android:layout_width="300dp"
+                    android:layout_height="200dp"
+                    android:scaleType="centerCrop"
+                    android:layout_margin="20dp"
+                    app:lottie_rawRes="@raw/no_order"
+                    app:lottie_autoPlay="true"
+                    app:lottie_loop="true"
+                    />
 
-            />
-    </LinearLayout>
+                <TextView
+                    android:id="@+id/noOrderTv"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textAlignment="center"
+                    android:text="No Orders"
+                    android:textStyle="bold"
+                    android:textSize="18sp"
+
+                    />
+            </LinearLayout>
 
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="8dp"
-        android:clipToPadding="false"/>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:padding="8dp"
+                android:clipToPadding="false"/>
+        </LinearLayout>
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 </LinearLayout>
