--- a/app/src/main/res/layout/slide1.xml
+++ b/app/src/main/res/layout/slide1.xml
@@ -27,7 +27,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Welcome to QuickWash!"
+        android:text="Welcome to FastWash!"
         android:textSize="24sp"
         android:textColor="@color/black"
         android:textStyle="bold"
